   installation, as this may be necessary to have MySQL pick up
   all changes correctly.
 - Don't use -fstack-protector under Cygwin. (Closes: #2144713)
 - Distribute prebuilt versions of the admin and judge manuals and
   remove svn,expdlist downloads for the team manual.
 - New compactified layout of team manual.
 - Add note about Java class naming in team manual. (Closes: #2153189)

Version 2.2.0 - 11 August 2008
------------------------------
 - Do not install domjudge straight in $HOME by default.
 - [security] Add sanity check in jury interface whether basic authentication
   is enabled, and lock down jury inferface also for non-GET/POST requests
 - Fix race condition in team password check.
 - Improved MySQL query performance.
 - Move .htaccess config to apache config.
 - Fix 'NONINTERACTIVE' undefined (Closes: #1814594, thanks Maks Verver)
 - Moved beep system call to separate function in lib.misc.{c,php}.
 - Switch to UTF-8 for output. (Closes: #1742460)
 - Represent balloon colours with a symbol rather than filling the background,
   making the scoreboard less cacophonic. (Closes: #1808561)
 - Add a web based tool for tracking balloon handouts.
 - Fix C compiler warnings by using 'const char *'.
 - Fix noninteractive/logging code in websubmit to restore submitclient
   error parsing (Closes: #1829621).
 - Fix variable name in judge/compare_program.sh.
 - Added make dist target and removed generated figures.
 - Added cookie for last verifier in jury webinterface (Closes: #1742044).
 - Added option to only show unverified submissions in jury interface.
 - Fix bug that jury was not allowed to set clarifications (un)answered.
 - Fix problem that runguard ignored SIGALRM on some distributions (thanks
   Tobias Werth).
 - New required activatetime field for a contest: defines the moment the
   team/public displays start to display this contest, but no submissions
   accepted yet. Solves the problem of testsession data still displayed upto