@@ -21,6 +21,7 @@ Version 3.0.0 - SVN
    remove svn,expdlist downloads for the team manual.
  - New compactified layout of team manual.
  - Add note about Java class naming in team manual. (Closes: #2153189)
+ - Add binary file check in commandline submit. (Closes: #2046017)
 
 Version 2.2.0 - 11 August 2008
 ------------------------------
